--- a/html/user/set.html
+++ b/html/user/set.html
@@ -15,6 +15,9 @@
             top: 35px;
             margin: 0 0 0 -56px;
         }
+        .layui-form-radio * {
+            font-size: 14px;
+        }
 
     </style>
 </head>
@@ -134,7 +137,7 @@
                                     <input type="radio" name="sex" value="男" title="男">
                                     <div class="layui-unselect layui-form-radio"><i
                                             class="layui-anim layui-icon"></i>
-                                        <div>男</div>
+                                        <div style="font-size: 20px">男</div>
                                     </div>
                                     <input type="radio" name="sex" value="女" title="女">
                                     <div class="layui-unselect layui-form-radio"><i
