--- a/html/jie/add.html
+++ b/html/jie/add.html
@@ -1,104 +1,114 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>发表问题</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8">
+    <title>发表问题</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="达达问答">
     <meta name="description" content="达达达数据结构专业问答">
-  <link rel="stylesheet" href="../../res/layui/css/layui.css">
-  <link rel="stylesheet" href="../../res/css/global.css">
+    <link rel="stylesheet" href="../../res/layui/css/layui.css">
+    <link rel="stylesheet" href="../../res/css/global.css">
 </head>
 <body>
 
 <div class="fly-header layui-bg-black">
-  <div class="layui-container">
-      <a class="fly-logo" href="../index.html">
-          <img width="180" src="../../res/images/fao.png" alt="达达问答">
-      </a>
-
-      <ul class="layui-nav fly-nav-user">
-
-      <!-- 登入后的状态 -->
-      <li class="layui-nav-item">
-        <a class="fly-nav-avatar" href="javascript:;">
-          <cite class="layui-hide-xs">贤心</cite>
-          <i class="iconfont icon-renzheng layui-hide-xs" title="认证信息：layui 作者"></i>
-          <i class="layui-badge fly-badge-vip layui-hide-xs">VIP3</i>
-          <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
+    <div class="layui-container">
+        <a class="fly-logo" href="../index.html">
+            <img width="180" src="../../res/images/fao.png" alt="达达问答">
         </a>
-        <dl class="layui-nav-child">
-          <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
-          <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的消息</a></dd>
-          <dd><a href="../user/home.html"><i class="layui-icon" style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a></dd>
-          <hr style="margin: 5px 0;">
-          <dd><a href="" style="text-align: center;">退出</a></dd>
-        </dl>
-      </li>
-    </ul>
-  </div>
+
+        <ul class="layui-nav fly-nav-user">
+
+            <!-- 登入后的状态 -->
+            <li class="layui-nav-item">
+                <a class="fly-nav-avatar" href="javascript:;">
+                    <cite class="layui-hide-xs">贤心</cite>
+                    <!--                    <i class="iconfont icon-renzheng layui-hide-xs" title="认证信息：layui 作者"></i>-->
+                    <!--                    <i class="layui-badge fly-badge-vip layui-hide-xs">VIP3</i>-->
+                    <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
+                </a>
+                <dl class="layui-nav-child">
+                    <dd><a href="../user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
+                    <dd><a href="../user/message.html"><i class="iconfont icon-tongzhi"
+                                                          style="top: 4px;"></i>我的消息</a></dd>
+                    <dd><a href="../user/home.html"><i class="layui-icon"
+                                                       style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a>
+                    </dd>
+                    <hr style="margin: 5px 0;">
+                    <dd><a href="" style="text-align: center;">退出</a></dd>
+                </dl>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <div class="layui-container fly-marginTop">
-  <div class="fly-panel" pad20 style="padding-top: 5px;">
-    <!--<div class="fly-none">没有权限</div>-->
-    <div class="layui-form layui-form-pane">
-      <div class="layui-tab layui-tab-brief" lay-filter="user">
-        <ul class="layui-tab-title">
-          <li class="layui-this">发表新帖<!-- 编辑帖子 --></li>
-        </ul>
-        <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
-          <div class="layui-tab-item layui-show">
-            <form action="" method="post">
-              <div class="layui-row layui-col-space15 layui-form-item">
-                <div class="layui-col-md3">
-                  <label class="layui-form-label">所在专栏</label>
-                  <div class="layui-input-block">
-                    <select lay-verify="required" name="class" lay-filter="column">
-                      <option></option>
-                      <option value="0">数据结构概述</option>
-                      <option value="99">线性表</option>
-                      <option value="100">栈和队列</option>
-                      <option value="101">字符串</option>
-                      <option value="168">树</option>
-                      <option value="169">图</option>
-                      <option value="169">算法</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="layui-col-md9">
-                  <label for="L_title" class="layui-form-label">标题</label>
-                  <div class="layui-input-block">
-                    <input type="text" id="L_title" name="title" required lay-verify="required" autocomplete="off" class="layui-input">
-                    <!-- <input type="hidden" name="id" value="{{d.edit.id}}"> -->
-                  </div>
-                </div>
-              </div>
-              <div class="layui-form-item layui-form-text">
-                <div class="layui-input-block">
-                  <textarea id="L_content" name="content" required lay-verify="required" placeholder="详细描述" class="layui-textarea"
+    <div class="fly-panel" pad20 style="padding-top: 5px;">
+        <!--<div class="fly-none">没有权限</div>-->
+        <div class="layui-form layui-form-pane">
+            <div class="layui-tab layui-tab-brief" lay-filter="user">
+                <ul class="layui-tab-title">
+                    <li class="layui-this">发表新帖<!-- 编辑帖子 --></li>
+                </ul>
+                <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
+                    <div class="layui-tab-item layui-show">
+                        <form action="problem.html" method="post">
+                            <div class="layui-row layui-col-space15 layui-form-item">
+                                <div class="layui-col-md3">
+                                    <label class="layui-form-label">类型</label>
+                                    <div class="layui-input-block">
+                                        <select lay-verify="required" name="category"
+                                                id="reason-select"
+                                                lay-filter="column">
+                                            <!--                                            <option></option>-->
+                                            <!--                                            <option value="0">数据结构概述</option>-->
+                                            <!--                                            <option value="99">线性表</option>-->
+                                            <!--                                            <option value="100">栈和队列</option>-->
+                                            <!--                                            <option value="101">字符串</option>-->
+                                            <!--                                            <option value="168">树</option>-->
+                                            <!--                                            <option value="169">图</option>-->
+                                            <!--                                            <option value="169">算法</option>-->
+                                        </select>
+                                    </div>
+                                </div>
+<!--                                <div class="layui-col-md9">-->
+<!--                                    <label for="L_title" class="layui-form-label">标题</label>-->
+<!--                                    <div class="layui-input-block">-->
+<!--                                        <input type="text" id="L_title" name="title" required-->
+<!--                                               lay-verify="required" autocomplete="off"-->
+<!--                                               class="layui-input">-->
+<!--                                        &lt;!&ndash; <input type="hidden" name="id" value="{{d.edit.id}}"> &ndash;&gt;-->
+<!--                                    </div>-->
+<!--                                </div>-->
+                            </div>
+                            <div class="layui-form-item layui-form-text">
+                                <div class="layui-input-block">
+                  <textarea id="L_content" name="title" required lay-verify="required"
+                            placeholder="问题描述" class="layui-textarea"
                             style="height: 260px;"></textarea>
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <!--                                <label for="L_vercode" class="layui-form-label">验证码</label>-->
+                                <!--                                <div class="layui-input-inline">-->
+                                <!--                                    <input type="text" id="L_vercode" name="vercode" required-->
+                                <!--                                           lay-verify="required" placeholder="请输入验证码"-->
+                                <!--                                           autocomplete="off" class="layui-input">-->
+                                <!--                                </div>-->
+                                <!--                                <div class="layui-form-mid">-->
+                                <!--                                    <span style="color: #c00;">1+1=?</span>-->
+                                <!--                                </div>-->
+                            </div>
+                            <div class="layui-form-item">
+                                <button class="layui-btn" lay-filter="problem" lay-submit>立即发布
+                                </button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-              </div>
-              <div class="layui-form-item">
-                <label for="L_vercode" class="layui-form-label">验证码</label>
-                <div class="layui-input-inline">
-                  <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请输入验证码" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid">
-                  <span style="color: #c00;">1+1=?</span>
-                </div>
-              </div>
-              <div class="layui-form-item">
-                <button class="layui-btn" lay-filter="*" lay-submit>立即发布</button>
-              </div>
-            </form>
-          </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 <div class="fly-footer">
@@ -108,20 +118,47 @@
 
 <script src="../../res/layui/layui.all.js"></script>
 <script>
-layui.cache.page = 'jie';
-layui.cache.user = {
-  username: '游客'
-  ,uid: -1
-  ,avatar: '../../res/images/avatar/00.jpg'
-  ,experience: 83
-  ,sex: '男'
-};
-layui.config({
-  version: "3.0.0"
-  ,base: '../../res/mods/'
-}).extend({
-  fly: 'index'
-}).use('fly');
+    layui.cache.token = JSON.parse(localStorage.getItem('token'));
+    // layui.cache.page = 'jie';
+    layui.cache.user = {
+        username: '游客'
+        , uid: -1
+        , avatar: '../../res/images/avatar/00.jpg'
+        , experience: 83
+        , sex: '男'
+    };
+    layui.config({
+        version: "3.0.0"
+        , base: '../../res/mods/'
+    }).extend({
+        fly: 'index'
+    }).use(['fly', 'form'], function () {
+        let fly = layui.fly;
+        let $ = layui.jquery;
+        if (layui.cache.token) {
+            // 登入
+            $('cite.layui-hide-xs').text(layui.cache.token.username);
+            // 设置nickname
+            $('.fly-nav-avatar img').attr('src', layui.imgUrl() + layui.cache.token.avatar);
+        }
+
+        function renderForm() {
+            let form = layui.form;//高版本建议把括号去掉，有的低版本，需要加()
+            form.render();
+        }
+
+        fly.json('/problemManager/problemType', null, function (res) {
+            let reason = $('#reason-select');
+            reason.empty();
+            reason.append('<option></option>');
+
+            $.each(res.body.data, function (index, val) {
+                reason.append($('<option></option>').attr('value', val.id).text(val.categoryName))
+            });
+            renderForm();
+            console.log(res);
+        }, {type: 'get'});
+    });
 </script>
 
 </body>
